# simple-job-events-demo

./: .gitignore  Dockerfile  LICENSE  README.md  chat_simulator.py  make_request.py  pyproject.toml  simulator.py  tool-service.py
client/: README.md  vite.config.ts
client/api-examples/: job-events.json
client/src/: App.tsx
client/src/components/ui/: badge.tsx
client/src/hooks/: useChatJobEvents.ts  useDirectLiteLLM.ts  useWarmUp.ts  useWorkflow.ts
client/src/lib/: api.ts
client/src/pages/: ChatPage.tsx
client/src/types/: events.ts
docs/: JOB_EVENTS_DEMO.md  LATENCY_METRICS.md  ivcap-openapi3.json  log-example-1.md  log-example-2.md  log-example-summary-1.md  log-example-summary-2.md  time-to-first-token-stats-FIRST_BATCH_FLUSH_MAX_TOKENS-1.md  time-to-first-token-stats-FIRST_BATCH_FLUSH_MAX_TOKENS-3.md
scripts/: benchmark-ttft.mjs
tests/: request.json  request_chat.json
