[project]
name = "simple-job-events-demo"
version = "0.1.0"
description = "Simple demo of IVCAP Job Events API"
authors = [
    {name = "Max Ott",email = "max.ott@data61.csiro.au"},
    {name = "Ashley Stacey",email = "Ashley.Stacey@data61.csiro.au"},
    {name = "Dan Wild",email = "Dan.Wild@data61.csiro.au"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "ivcap-ai-tool (>=0.7.15,<0.8.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]

[tool.poetry-plugin-ivcap]
service-file = "tool-service.py"
service-id = "urn:ivcap:service:f82da254-5025-5d94-9186-e76fa45bb7cc"
service-type = "lambda"
# policy = "urn:ivcap:policy:ivcap.open.metadata"
port = 8078
# docker
docker-run-opts = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
